[tool.poetry]
name = "sysex-overflow"
version = "0.1.0"
description = ""
authors = ["Miguel Guthridge <hello@miguelguthridge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mido = { extras = ["ports-rtmidi"], version = "^1.3.2" }
fl-studio-api-stubs = "^33.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
